# CourseMaterials

./: .gitignore  LICENSE  README.md  USUexam.cls  syllabus.cls
cs1400/: README.md
cs1400/lectures/: 01-Introduction.mm  02-BasicStatements.mm  05-UserDefinedDataTypes.mm  07-Containers.mm  MissingSections.txt  lecture.xslt  makefile
cs1400/projects/lionheart/: Action.cpp  Action.hpp  AnsiDisplay.cpp  AnsiDisplay.hpp  Archer.hpp  CMakeLists.txt  CombinedPngDisplay.hpp  ConsoleDisplay.hpp  Crown.hpp  Game.cpp  Game.hpp  Gauntlet.cpp  Gauntlet.hpp  Infantry.hpp  Knight.hpp  Map.cpp  Map.hpp  Player.hpp  PngDisplay.cpp  PngDisplay.hpp  PngUtils.cpp  README.md  SingleElimination.hpp  Tournament.hpp  Unit.cpp  lionheart_main.cpp
cs1400/projects/lionheart/Player/: BrandonSmith.cpp  BrandonSmith.hpp  ChrisIrvine.cpp  ChrisIrvine.hpp  CirclingShark.hpp  ExamplePlayer.cpp  MathewWarenski.cpp  MathewWarenski.hpp  SittingDuck.hpp  WildBoar.hpp
cs1400/projects/lionheart/docs/: class.uml
cs1400/projects/lionheart/resources/: archer-2.xpm  archer-3.xpm  archer-blank.xcf  archer-full.xpm  bend-s.xpm  chevron.xpm  chief.xpm  colors.xcf  cross.xpm  crown-blank.xcf  infantry.xpm  invcheveron.xpm  knight.xpm  perbend-s.xpm  perbend.xpm  perpale.xpm  saltire.xpm  unit-bend-s.xcf  unit-bend.xcf  unit-blank.xcf  unit-chevron.xcf  unit-perfess.xcf  unit-saltire.xcf
cs1400/projects/lionheart/resources/maps/: Twists&Turns.in  test.in
cs1400/projects/lionheart/test/: MapTest.cpp  PngTest.cpp  UniqueBlazonTest.cpp  UnitTest.cpp
cs1410/: assignments.mm
cs1410/data/: fall2015-midterm-survey.tab
cs1410/lectures/: 01-Introduction.mm  05-OtherLinearDataStructures.mm  AdvancedFileIO.mm  lecture.xslt
cs1410/lectures/old/: 09-Trees.mm
cs1410/projects/maze/: Maze.cpp  Maze.hpp  maze.txt
cs1410/projects/tictactoe/: main.cpp  (+5 more)
cs3100/: cs3100_syllabus.tex
cs3100/exams/: 2017-03-Midterm.tex
cs3100/lectures/: 01-Introduction.mm  02-Threads.mm  Processes.mm
cs3100/projects/scheduler/: AlwaysInCache.hpp  ApproximateShortestJobFirstReadyQueue.cpp  ApproximateShortestJobFirstReadyQueue.hpp  CMakeLists.txt  CacheAlgorithm.hpp  Event.hpp  EventQueue.cpp  EventQueue.hpp  FifoReadyQueue.cpp  FifoReadyQueue.hpp  ReadyQueue.hpp  ShortestJobFirstReadyQueue.cpp  ShortestJobFirstReadyQueue.hpp  Simulation.cpp  Simulation.hpp  Task.cpp  Task.hpp  _clang-format  scheduler_main.cpp
cs3450/: Outline.md
cs3450/exams/: 2016-10-Midterm.tex  2016-12-Final.tex
cs3450/lectures/: 01-Introduction.mm  02-ProjectManagement.mm  lecture.xslt  makefile
cs4700/: cs4700_syllabus.tex  sequence.dot
cs4700/exams/: 2017-10-Midterm.tex  2017-12-Final.tex  2018-11-Midterm.tex  2018-12-Final.tex
cs4700/lectures/: 01-Introduction.mm  02-Evaluation.mm  03-SyntaxSemantics.mm  04-Names.mm  05-TypeAbstraction.mm  06-Expressions.mm  07-Control.mm  08-Subprograms.mm  09-OO.mm  10-Concurrency.mm  11-Functional.mm  12-Logic.mm  A-Postscript.mm  B-Prolog.mm  C-Haskell.mm  lecture.xslt  makefile
cs5300/: cs5300_syllabus.tex
cs5300/examples/calc/: CMakeLists.txt  main.cpp  parser.y  scanner.l  symbol_table.cpp  symbol_table.hpp
cs5300/lectures/: 01-Introduction.mm  01-Introduction.tex  02-LexicalAnalysis.mm  02-MIPS.mm  02-MIPS.tex  03-LexicalAnalysis.tex  04-SyntaxAnalysis.mm  04-SyntaxAnalysis.tex  05-SemanticAnalysis.mm  05-SemanticAnalysis.tex  06-Code Generation-I.mm  06-Code Generation-I.tex  08-ProceduresFunctions.mm  08-ProceduresFunctions.tex  10-Optimizations.mm  10-Optimizations.tex  LexicalAnalysis.mm
cs5400/: Outline.md
cs5400/exams/: 2016-12-Final.tex
cs5400/lectures/: 01-Introduction.mm  02-SystemsAndModels.mm  03-BasicGraphics.mm  04-Transformations.mm  05-Viewing.mm  lecture.xslt  makefile
cs6400/: Outline.mm  cs6400_syllabus.tex
cs6400/lectures/: 01-Introduction.mm  02-Geometry.mm  03-Shapes.mm  04-ColorAndCamera.mm  05-Sampling.mm  10-MonteCarlo.mm  lecture.xslt  makefile
data/: fall2015-midterm-survey.tab
exams/: 2015-08-SummerFinal.tex
lectures/: 01-AbstractDataTypes.mm  01-Introduction.mm  02-BasicStatements.mm  02-Recursion.mm  02-x.mm  03-Classes.mm  03-Software Engineering.mm  03-SoftwareEngineering.mm  03-SortingSearching.mm  04-ControlFlow.mm  04-DataStructureConcepts.mm  04-MoreClasses.mm  05-Inheritance.mm  05-UserDefinedDataTypes.mm  06-ExceptionsTemplatesSTL.mm  06-InputOutput.mm  07-LinearDataStructures.mm  08-x.mm  MissingSections.txt  lecture.xslt  makefile
projects/lionheart/: 4player.in  Action.cpp  Action.hpp  AnsiDisplay.cpp  Archer.cpp  Archer.hpp  Board.cpp  Board.hpp  CMakeLists.txt  CombinedPngDisplay.cpp  CombinedPngDisplay.hpp  ConsoleDisplay.cpp  ConsoleDisplay.hpp  Crown.hpp  Display.hpp  Game.cpp  Game.hpp  Gauntlet.cpp  Infantry.hpp  Knight.hpp  Map.cpp  Map.hpp  Plan.cpp  Plan.hpp  Player.hpp  PngDisplay.cpp  PngUtils.cpp  PngUtils.hpp  SingleElimination.cpp  SituationReport.hpp  Swiss.cpp  Swiss.hpp  Unit.cpp  Unit.hpp  _clang-format  adn.cpp  akf.h  all.cpp  alt.h  ark.cpp  (+177 more)
projects/lionheart/Player/: BrandonSmith.cpp  BrandonSmith.hpp  ChargingBadger.hpp  ChrisIrvine.cpp  ChrisIrvine.hpp  CirclingShark.hpp  CrouchingTiger.hpp  ExamplePlayer.cpp  ExamplePlayer.hpp  Goldfish.hpp  HiddenDragon.hpp  MathewWarenski.cpp  SittingDuck.hpp  SnappingTurtle.hpp  WildBoar.hpp  adc.cpp  adc.h  adi.cpp  adi.h  adn.cpp  adn.h  akf.cpp  all.h  alt.cpp  amo.cpp  amo.h  ark.h  asd.cpp  asd.h  ben.cpp  ben.h  boo.cpp  boo.h  bos.cpp  bos.h  bri.cpp  cal.h  cdg.cpp  cjt.h  ckc.cpp  (+155 more)
projects/lionheart/resources/: archer-1.xpm  bend.xpm  crown.xpm  fess.xpm  knight-blank.xcf  pale.xpm  perfess.xpm  quarterly.xpm  unit-chief.xcf  unit-cross.xcf  unit-fess.xcf  unit-invchevron.xcf  unit-pale.xcf  unit-perbend-s.xcf  unit-perbend.xcf  unit-perpale.xcf  unit-quarterly.xcf
projects/lionheart/resources/maps/: The Arena.in  map1.in  map4.in  map6.in  tiny.in
projects/lionheart/test/: PathsTest.cpp  PngTest.cpp  UnitTest.cpp
projects/tictactoe/: Board.h  DefensiveRandomPlayer.cpp  PerfectPlayer.cpp  PerfectPlayer.h  Player.cpp  Player.h  RandomPlayer.cpp
shared/cpsl/: CPSL.tex
(+48 files in other folders)
